--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -23,6 +23,15 @@ body {
   z-index: 10;
 }
 
+.img-viewer1{
+  padding: 5px;
+  width: 80%;
+  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .img {
   padding: 5px;
   width: 80%;
@@ -34,8 +43,8 @@ body {
 
 .img2 {
   padding: 3px;
-  width: 500px;
-  height: 480px;
+  width: 100%;
+  height: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
