--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -83,40 +83,40 @@
 </style>
 
 <main>
-<div class="p-3 mb-2 bg-light text-dark">
-<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" style="margin: 0%;">
+<div class="p-3 mb-2 bg-light text-dark" style="height: 100%;">
+<div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" style="margin: 0%; height: 100%;">
 <div class="carousel-indicators">
   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
 </div>
-<div class="carousel-inner">
-  <div class="carousel-item active">
-    <img class="img" src="https://images.pexels.com/photos/1181298/pexels-photo-1181298.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+<div class="carousel-inner" style="height: 100%;">
+  <div class="carousel-item active" style="height: 100%;">
+    <img class="img-viewer1" src="https://images.pexels.com/photos/4709289/pexels-photo-4709289.jpeg">
     <div class="container">
       <div class="carousel-caption text-start">
-        <h1>GeekcodeCarft</h1>
-        <p class="opacity-75">เป็นเว็บไซต์ช่วยพัฒนาทักษะที่จำเป็นต่อการเขียนโปรแกรม</p>
+        <h1 style="font-size: 100px">GeekcodeCarft</h1>
+        <p class="p-img1" style="font-size: 40px">เป็นเว็บไซต์ช่วยพัฒนาทักษะที่จำเป็นต่อการเขียนโปรแกรม</p>
         <!-- <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p> -->
       </div>
     </div>
   </div>
-  <div class="carousel-item">
-    <img class="img" src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+  <div class="carousel-item" style="height: 100%;">
+    <img class="img-viewer1" src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     <div class="container">
       <div class="carousel-caption">
-        <h1>Another example headline.</h1>
-        <p>Some representative placeholder content for the second slide of the carousel.</p>
+        <h1 style="font-size: 100px">Course</h1>
+        <p class="p-img1" style="font-size: 40px">มีเนื้อหาและวิดีโอการเรียนที่ช่วยพัฒนาศักยภาพจาก Youtuber ชื่อดัง</p>
         <!-- <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p> -->
       </div>
     </div>
   </div>
-  <div class="carousel-item">
-    <img class="img" src="https://images.pexels.com/photos/4164418/pexels-photo-4164418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+  <div class="carousel-item" style="height: 100%;">
+    <img class="img-viewer1" src="https://images.pexels.com/photos/7241413/pexels-photo-7241413.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     <div class="container">
       <div class="carousel-caption text-end">
-        <h1>One more for good measure.</h1>
-        <p>Some representative placeholder content for the third slide of this carousel.</p>
+        <h1 style="font-size: 100px">Competency</h1>
+        <p class="p-img1" style="font-size: 40px">ส่งเสริมสมรรถนะทั้ง 4 ด้านที่จำเป็นต่อนักศึกษา</p>
         <!-- <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p> -->
       </div>
     </div>
