--- a/views/student/course/3_Datatype-course.ejs
+++ b/views/student/course/3_Datatype-course.ejs
@@ -68,8 +68,9 @@
                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/3rrtOFUHv9I?si=hlThjJG8_2uWP94o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <br ></div>
 
-        
-        <button onclick="window.location.href='/course-Datatype-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+        <!-- 
+        <button onclick="window.location.href='/course-Datatype-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
         
 
         
