--- a/views/student/course/5_1_Selection-course.ejs
+++ b/views/student/course/5_1_Selection-course.ejs
@@ -200,7 +200,9 @@
                 </div>
         </div>
         
-        <button onclick="window.location.href='/course-Selection_Statement-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+        <!-- 
+        <button onclick="window.location.href='/course-Selection_Statement-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
         
 
         
