--- a/views/student/course/9_Array-course.ejs
+++ b/views/student/course/9_Array-course.ejs
@@ -218,7 +218,10 @@
                     </div>
                 </div>
         <br></div> 
-        <button onclick="window.location.href='/course-Array-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+
+        <!-- 
+        <button onclick="window.location.href='/course-Array-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
         
 
         
