--- a/views/student/course/6_Pointers-course.ejs
+++ b/views/student/course/6_Pointers-course.ejs
@@ -112,8 +112,9 @@
                     </div>
             <br ></div>
             
-        
-        <button onclick="window.location.href='/course-Pointers-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+        <!-- 
+        <button onclick="window.location.href='/course-Pointers-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
         
 
         
