--- a/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
+++ b/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
@@ -474,19 +474,13 @@
 
                 <!-- ข้อ 16 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment) ให้เขียน Algorithm การทำงานของ Flowchart ต่อไปนี้ แบบ Step by Step ให้ถูกต้อง (3 คะแนน) <br>
-                    และเขียนตอบคำถามว่า โปรแกรมนี้คือโปรแกรคำนวณค่าอะไร
+                    16.1 (Deployment) ให้เขียน Algorithm การทำงานของ Flowchart ต่อไปนี้ แบบ Step by Step ให้ถูกต้อง  <br>
+                    และเขียนตอบคำถามว่า โปรแกรมนี้คือโปรแกรคำนวณค่าอะไร (3 คะแนน)
                 </p>
                 <div class="group" style="margin: 20px;">
                     <iframe src="https://drive.google.com/file/d/1MPevV4k9LkzOjqrxAHvA08qs27XNpqxk/preview" width="400" height="480" allow="autoplay"></iframe>
 
                 <div class="form-group">
-                    <div class="group2">
-                        <h3>CODE</h3>
-                        <button type="button" style="color: black;" class="btn1 " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด
-                        </button>
-                    </div>
                     <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
                     <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" required></textarea>
                 </div></div>
@@ -496,9 +490,9 @@
                     <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult16" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.3 (Improvement) ถ้าต้องคำรนวณหาปริมาตรของพีระมิดต้องแก้ไข Algorithms และ Flowcharts อย่างไร (1 คะแนน) <br>
+                    16.3 (Improvement) ถ้าต้องคำรนวณหาปริมาตรของพีระมิดต้องแก้ไข Algorithms และ Flowcharts อย่างไร <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
-                    โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง</p>
+                    โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
                     <div class="group3 bg-dark">
                         
                             <b style="color: #ff8821;">Draw.io</b>
@@ -509,8 +503,8 @@
                 <br><br>
                 <!-- ข้อ 17 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้วาดรูป Flowchart ของ Algorithm โปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) ต่อไปนี้ให้ถูกต้อง (3 คะแนน) <br>
-                    (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง 
+                    17.1 (Deployment) ให้วาดรูป Flowchart ของ Algorithm โปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) ต่อไปนี้ให้ถูกต้อง  <br>
+                    (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                     <iframe src="https://drive.google.com/file/d/1y_OuR6vmKvC7ucsPYgurPV43a350W4-D/preview" width="100%" height="480" allow="autoplay"></iframe>                
                 </p><br>
 
@@ -527,9 +521,9 @@
                     <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #8c521f;">
-                    17.3 (Improvement) ถ้าต้องแปลงอุณหภูมิจาก Fahrenheit (F) เป็น Celsius (C) ต้องแก้ไข Flowcharts อย่างไร (1 คะแนน) <br>
+                    17.3 (Improvement) ถ้าต้องแปลงอุณหภูมิจาก Fahrenheit (F) เป็น Celsius (C) ต้องแก้ไข Flowcharts อย่างไร <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
-                    โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง</p>
+                    โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
                     <div class="group3 bg-dark">
                         
                         <b style="color: #ff8821;">Draw.io</b>
@@ -540,8 +534,8 @@
                 <br>
                 <!-- ข้อ 18 -->
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) ให้เขียน Flowchart ของโปรแกรมตัดเกรด โดยให้มีการรับค่าของตัวแปร และแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
-                    (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง 
+                    18.1 (Deployment) ให้เขียน Flowchart ของโปรแกรมตัดเกรด โดยให้มีการรับค่าของตัวแปร และแสดงค่าของข้อมูลดังนี้  <br>
+                    (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                     <iframe src="https://drive.google.com/file/d/1lYWF0-KxUkVRufld0_ECkov6fIpVfPL0/preview" width="100%" height="480" allow="autoplay"></iframe>
                 </p><br>
                     
@@ -557,9 +551,9 @@
                         <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult18" required></textarea>
                     <br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #366241;">
-                        18.3 (Improvement) ถ้าต้องการให้มีการแสดงข้อความแจ้งเตือนว่า "Please Enter 0 - 100: " เมื่อใส่ข้อมูลที่ไม่ใช่ตัวเลข 0 - 100 ต้องแก้ไข Flowcharts อย่างไร (1 คะแนน) <br>
+                        18.3 (Improvement) ถ้าต้องการให้มีการแสดงข้อความแจ้งเตือนว่า "Please Enter 0 - 100: " เมื่อใส่ข้อมูลที่ไม่ใช่ตัวเลข 0 - 100 ต้องแก้ไข Flowcharts อย่างไร  <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
-                        โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง</p>
+                        โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
                         <div class="group3 bg-dark">
                             
                             <b style="color: #ff8821;">Draw.io</b>
@@ -571,8 +565,8 @@
                     <!-- ข้อ 19 -->
                     <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                         19. (Deployment)  ให้เขียน Flowchart ของโปรแกรมแปลงอุณหภูมิ พิมพ์  F คือการแปลง Celcius เป็น Fahrenheit <br>
-                        และพิมพ์ C คือการแปลง Fahrenheit เป็น Celcius โดยรับค่าของตัวแปร ทำการคำนวณ และแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
-                        (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง 
+                        และพิมพ์ C คือการแปลง Fahrenheit เป็น Celcius โดยรับค่าของตัวแปร ทำการคำนวณ และแสดงค่าของข้อมูลดังนี้  <br>
+                        (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
                         <iframe src="https://drive.google.com/file/d/1w737Hm85h6icIA0eL-N75Ul4Sca8sQtH/preview" width="100%" height="480" allow="autoplay"></iframe>                
                     </p><br>
                     <div class="group3 bg-dark">
@@ -588,9 +582,9 @@
                     <br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #453662;">
                         19.3 (Improvement) ถ้าต้องการให้เพิ่มเงื่อนไขจากโปรแกรมเดิม โดยให้พิมพ์ K ทำการแปลงอุณภูมิ Celsius เป็น Kelvin ต้องแก้ไข Flowchart อย่างไร <br>
-                        กำหนดให้สูตร Kelvin = Celsius + 273.15 (1 คะแนน) <br>
+                        กำหนดให้สูตร Kelvin = Celsius + 273.15 <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
-                        โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง</p>
+                        โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
                         <div class="group3 bg-dark">
                             
                             <b style="color: #ff8821;">Draw.io</b>
@@ -616,9 +610,9 @@
                         <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult20" required></textarea>
                     <br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #687521;">
-                        20.3 (Improvement) ถ้าต้องการให้คิดดอกเบี้ยเงินฝากประจำเป็น 6 เดือน จะแก้ไข Flowchart อย่างไร (1 คะแนน)<br>
+                        20.3 (Improvement) ถ้าต้องการให้คิดดอกเบี้ยเงินฝากประจำเป็น 6 เดือน จะแก้ไข Flowchart อย่างไร<br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io 
-                        โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง</p>
+                        โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (1 คะแนน)</p>
                         <div class="group3 bg-dark">
                             
                             <b style="color: #ff8821;">Draw.io</b>
