--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -146,8 +146,8 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-    <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+    <h2 class="featurette-heading fw-normal lh-1">Knowledge</h2>
+    <p class="lead">พัฒนาความรู้ในการเขียนโปรแกรม ทำให้ผู้เรียนมีการคิดแบบมีเหตุผลเป็นระบบ มีความคิดสร้างสรรค์ สามารถนำไปใช้ในการแก้ไขปัญหาและสามารถสร้างงานที่ดีได้</p>
   </div>
   <div class="col-md-5">
     <img class="img2" src="https://images.unsplash.com/photo-1537884944318-390069bb8665?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -158,11 +158,11 @@
 
 <div class="row featurette">
   <div class="col-md-7 order-md-2">
-    <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+    <h2 class="featurette-heading fw-normal lh-1">Tracing</h2>
+    <p class="lead">พัฒนาทักษะการติดตามการทำงานของโปรแกรม เพื่อติดตามการทำงานของโค้ดที่เขียน โดยการตามรอยของคำสั่งทีละขั้นตอนเพื่อเข้าใจว่าโปรแกรมทำงานอย่างไรในแต่ละขั้นตอนของการทำงาน</p>
   </div>
   <div class="col-md-5 order-md-1">
-    <img class="img2" src="https://images.pexels.com/photos/459653/pexels-photo-459653.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+    <img class="img2" src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
   </div>
 </div>
 
@@ -170,8 +170,8 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-    <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+    <h2 class="featurette-heading fw-normal lh-1">Explaining</h2>
+    <p class="lead">พัฒนาทักษะการอธิบายการทำงานของโปรแกรม เพื่อให้เข้าใจง่ายและชัดเจนสำหรับที่ไม่เคยเห็นโค้ดนั้นมาก่อน การอธิบายโค้ดมีประโยชน์มากในการแบ่งปันความรู้ การสอน หรือเพื่อให้ทีมทำงานร่วมกันได้เข้าใจโค้ด</p>
   </div>
   <div class="col-md-5">
     <img class="img2" src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">    
@@ -182,11 +182,11 @@
 
 <div class="row featurette">
   <div class="col-md-7 order-md-2">
-    <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+    <h2 class="featurette-heading fw-normal lh-1">Writing</h2>
+    <p class="lead">พัฒนาทักษะการเขียนโปรแกรม เพื่อการสร้างโค้ดที่มีความชัดเจน อ่านง่าย และทำงานได้ตามที่ต้องการ ซึ่งเป็นขั้นตอนที่สำคัญในการพัฒนาโปรแกรม</p>
   </div>
   <div class="col-md-5 order-md-1">
-    <img class="img2" src="https://images.pexels.com/photos/459653/pexels-photo-459653.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+    <img class="img2" src="https://images.pexels.com/photos/1181243/pexels-photo-1181243.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
   </div>
 </div>
 
