--- a/views/Auth/register.ejs
+++ b/views/Auth/register.ejs
@@ -42,7 +42,7 @@
                   <label for="exampleFormControlSelect1">Role</label>
                   <select class="form-control" id="exampleFormControlSelect1" name="role">
                     <option value="Student">Student</option>
-                    <option value="Teacher">Teacher</option>
+                    <!-- <option value="Teacher">Teacher</option> -->
                     <!-- <option value="ADMIN">ADMIN</option> -->
                   </select>
               </div>
