--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -25,8 +25,8 @@ body {
 
 .img-viewer1{
   padding: 5px;
-  width: 80%;
-  height: 100%;
+  width: 1400px;
+  height: 830px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -43,8 +43,8 @@ body {
 
 .img2 {
   padding: 3px;
-  width: 100%;
-  height: 100%;
+  width: 380px;
+  height: 280px;
   display: block;
   margin-left: auto;
   margin-right: auto;
