--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -83,7 +83,7 @@
 </style>
 
 <main>
-<div class="p-3 mb-2 bg-light text-dark" style="height: 100%;">
+<div class="p-3 mb-2 bg-light text-dark" >
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel" style="margin: 0%; height: 100%;">
 <div class="carousel-indicators">
   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
