--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -91,7 +91,7 @@
                 <script>
                 // setup 
                 const data = {
-                  labels: ['Knowledge', 'Tracing', 'Explianing','Writing'],
+                  labels: ['Knowledge', 'Tracing', 'Explaining','Writing'],
                   datasets: [{
                     data: [<%= BasicPercent %>, <%= TracePercent %>,  <%= ExplainPercent %>, <%= WritePercent %>],
                     backgroundColor: [
