--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -95,7 +95,7 @@
     <img class="img-viewer1" src="https://images.pexels.com/photos/4709289/pexels-photo-4709289.jpeg">
     <div class="container">
       <div class="carousel-caption text-start">
-        <h1 style="font-size: 100px">GeekcodeCarft</h1>
+        <h1 style="font-size: 100px">GeekcodeCraft</h1>
         <p class="p-img1" style="font-size: 40px">เป็นเว็บไซต์ช่วยพัฒนาทักษะที่จำเป็นต่อการเขียนโปรแกรม</p>
         <!-- <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p> -->
       </div>
