--- a/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
+++ b/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
@@ -42,7 +42,7 @@
     <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <link rel="stylesheet" href="stylesheets/quiz.css">
     
-    <title>Algorithms and Flowcharts - QUIZ</title>
+    <title>(Post-test) Algorithms and Flowcharts</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Algorithms and Flowcharts (Quiz)</h1>
+                <h1>Algorithms and Flowcharts (Post-test)</h1>
                 
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
@@ -375,11 +375,11 @@
                     <div class="group2">
                         <input type="radio" class="btn-check" name="choice12" id="option12-1" autocomplete="off" value="A">
                         <label class="list-group-item btn-outline-dark list-group-item-action" for="option12-1">
-                            Yes
+                            True
                         </label>
                         <input type="radio" class="btn-check" name="choice12" id="option12-2" autocomplete="off" value="B">
                         <label class="list-group-item btn-outline-dark list-group-item-action" for="option12-2">
-                            No
+                            False
                         </label>
                     </div><br>  
                 <!-- ข้อ 13 -->
@@ -399,11 +399,11 @@
                             <div class="group2">
                                 <input type="radio" class="btn-check" name="choice13" id="option13-1" autocomplete="off" value="A">
                                 <label class="list-group-item btn-outline-dark list-group-item-action" for="option13-1">
-                                    Yes
+                                    True
                                 </label>
                                 <input type="radio" class="btn-check" name="choice13" id="option13-2" autocomplete="off" value="B">
                                 <label class="list-group-item btn-outline-dark list-group-item-action" for="option13-2">
-                                    No
+                                    False
                                 </label>
                                 </div>
 
@@ -482,7 +482,7 @@
 
                 <div class="form-group">
                     <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" required></textarea>
+                    <textarea style="height: 400px;" class="form-control" placeholder="STEP1:" id="code" name="code" rows="10" required></textarea>
                 </div></div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
@@ -498,7 +498,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink16" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink16" type="text" rows="10" required></textarea>
                     </div>
                 <br><br>
                 <!-- ข้อ 17 -->
@@ -513,7 +513,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink171" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink171" type="text" rows="10" required></textarea>
                     </div><br>
 
                 <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #8c521f;">
@@ -529,7 +529,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink172" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink172" type="text" rows="10" required></textarea>
                     </div>
                 <br>
                 <!-- ข้อ 18 -->
@@ -544,7 +544,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink181" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink181" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #366241;">
                         18.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อกำหนดให้ คะแนนเท่ากับ 80 (1 คะแนน)</p>
@@ -559,7 +559,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                             
-                            <input class="form-control" name="sendLink182" type="text" placeholder="Link">
+                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink182" type="text" rows="10" required></textarea>
                         </div>
                     <br>
                     <!-- ข้อ 19 -->
@@ -574,7 +574,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink191" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink191" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #453662;">
                         19.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อพิมพ์ C และใส่ค่า C เป็น 36 (1 คะแนน)</p>
@@ -590,7 +590,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                             
-                            <input class="form-control" name="sendLink192" type="text" placeholder="Link">
+                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink192" type="text" rows="10" required></textarea>
                         </div>
                     <br>
                     <!-- ข้อ 20 -->
@@ -603,7 +603,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink201" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink201" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #687521;">
                         20.2 (Result) ถ้ากำหนดให้ฝากเงินเริ่มต้นที่ 20,000 บาท เมื่อครบ 3 เดือน จะได้ดอกเบี้ยหลังหักภาษีเท่าไร (1 คะแนน)</p>
@@ -618,7 +618,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                             
-                            <input class="form-control" name="sendLink202" type="text" placeholder="Link">
+                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink202" type="text" rows="10" required></textarea>
                         </div>
                     <br>
 
