--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -58,9 +58,9 @@
             <iframe width="100%" height="600" src="https://www.youtube.com/embed/k4hsKlzFzCU?si=AMlcW1qaKBdpjvJC" title="YouTube video player" style="justify-content: center;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             
         <br><br>
-        <!--
+        
         <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h4>แบบทดสอบหลังเรียน</h4></button>-->
+        <h4>แบบทดสอบหลังเรียน</h4></button>
         
 
         
