--- a/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
+++ b/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
@@ -37,12 +37,12 @@
     </style>
 
     <link rel='stylesheet' href='stylesheets/home.css' />
-    
+    <link rel='stylesheet' href='stylesheets/home1.css' />
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <link rel="stylesheet" href="stylesheets/quiz.css">
     
-    <title>Introduction - PreTest</title>
+    <title>(Pre-test) Algorithms and Flowcharts</title>
 </head>
 
 <body>
@@ -214,20 +214,20 @@
                     
                     <input type="radio" class="btn-check" name="choice6" id="option6-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option6-1">
-                        การออกแบบและการวางแผน
+                        1 2
                     </label>
                     <input type="radio" class="btn-check" name="choice6" id="option6-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option6-2">
-                        การประเมินประสิทธิภาพ
+                        2 3 4
 
                     </label>
                     <input type="radio" class="btn-check" name="choice6" id="option6-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option6-3">
-                        การทดสอบและการดีบั๊ก
+                        0 1 2
                     </label>
                     <input type="radio" class="btn-check" name="choice6" id="option6-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option6-4">
-                        การเขียนโค้ด
+                        1 2 3
                     </label>
                 </div><br>
                 <!-- ข้อ 7 -->
@@ -379,11 +379,11 @@
                     <div class="group2">
                         <input type="radio" class="btn-check" name="choice12" id="option12-1" autocomplete="off" value="A">
                         <label class="list-group-item btn-outline-dark list-group-item-action" for="option12-1">
-                            Yes
+                            True
                         </label>
                         <input type="radio" class="btn-check" name="choice12" id="option12-2" autocomplete="off" value="B">
                         <label class="list-group-item btn-outline-dark list-group-item-action" for="option12-2">
-                            No
+                            False
                         </label>
                     </div><br>  
                 <!-- ข้อ 13 -->
@@ -403,11 +403,11 @@
                             <div class="group2">
                                 <input type="radio" class="btn-check" name="choice13" id="option13-1" autocomplete="off" value="A">
                                 <label class="list-group-item btn-outline-dark list-group-item-action" for="option13-1">
-                                    Yes
+                                    True
                                 </label>
                                 <input type="radio" class="btn-check" name="choice13" id="option13-2" autocomplete="off" value="B">
                                 <label class="list-group-item btn-outline-dark list-group-item-action" for="option13-2">
-                                    No
+                                    False
                                 </label>
                                 </div>
 
@@ -486,7 +486,7 @@
 
                 <div class="form-group">
                     <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-                    <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" required></textarea>
+                    <textarea style="height: 400px;" class="form-control" placeholder="STEP1:" id="code" name="code" rows="10" required></textarea>
                 </div></div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
@@ -502,7 +502,9 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink16" type="text" placeholder="Link">
+                        
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink16" type="text" rows="10" required></textarea>
+
                     </div>
                 <br><br>
                 <!-- ข้อ 17 -->
@@ -517,7 +519,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink171" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink171" type="text" rows="10" required></textarea>
                     </div><br>
 
                 <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #8c521f;">
@@ -533,7 +535,8 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink172" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink172" type="text" rows="10" required></textarea>
+
                     </div>
                 <br>
                 <!-- ข้อ 18 -->
@@ -548,7 +551,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink181" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink181" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #366241;">
                         18.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อกำหนดให้ คะแนนเท่ากับ 80 (1 คะแนน)</p>
@@ -563,7 +566,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                             
-                            <input class="form-control" name="sendLink182" type="text" placeholder="Link">
+                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink182" type="text" rows="10" required></textarea>
                         </div>
                     <br>
                     <!-- ข้อ 19 -->
@@ -578,7 +581,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink191" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink191" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #453662;">
                         19.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อพิมพ์ C และใส่ค่า C เป็น 36 (1 คะแนน)</p>
@@ -594,7 +597,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                             
-                            <input class="form-control" name="sendLink192" type="text" placeholder="Link">
+                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink192" type="text" rows="10" required></textarea>
                         </div>
                     <br>
                     <!-- ข้อ 20 -->
@@ -607,7 +610,7 @@
                         <b style="color: #ff8821;">Draw.io</b>
                         <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                         
-                        <input class="form-control" name="sendLink201" type="text" placeholder="Link">
+                        <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink201" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #687521;">
                         20.2 (Result) ถ้ากำหนดให้ฝากเงินเริ่มต้นที่ 20,000 บาท เมื่อครบ 3 เดือน จะได้ดอกเบี้ยหลังหักภาษีเท่าไร (1 คะแนน)</p>
@@ -622,7 +625,7 @@
                             <b style="color: #ff8821;">Draw.io</b>
                             <iframe style="width:95%;height:100px;" src="https://viewer.diagrams.net/?tags=%7B%7D&target=frame&highlight=0000ff&edit=_blank&layers=1&nav=1#RddG9DoMgEADgp2FXaKrO1talk0NnIlchQc8gjbZPXw1SS2wXcnx3cPwQlrfTxfBeXlGAJjQSE2EnQmmWHuZxgaeDJIkcNEYJR%2FEGlXrBir7soQQMQaFF1Fb1IdbYdVDbwLgxOIZld9Rh1543sIOq5nqvNyWsdJrSZPMSVCN95%2FiYuUzLffF6k0FygeMXsYKw3CBaF7VTDnp5O%2F8ubt35T%2FZzMAOd%2FbFgDra950nwQax4Aw%3D%3D"></iframe>
                             
-                            <input class="form-control" name="sendLink202" type="text" placeholder="Link">
+                            <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink202" type="text" rows="10" required></textarea>
                         </div>
                     <br>
 
