--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -24,8 +24,9 @@
         }
         
     </style>
-
-    <link rel='stylesheet' href='stylesheets/home.css' />
+    
+    <link rel='stylesheet' href='stylesheets/gamequiz.css' />
+    <script src="javascripts/gamequiz.js"></script>
     <title>Datatype and Variable</title>
 </head>
 
@@ -68,9 +69,46 @@
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ddbidsl_9Fc?si=ISnWVOhHQEgCnN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
         <br><br>
+        <div class="game">
+            <div class="c1">
+                <p id="demo4" class="head">ข้อ 4</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT4()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo5" class="head">ข้อ 5</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionT5()">Click</p>    
+                </div>
+            </div>
+            <div class="c1">
+                <p id="demo6" class="head">ข้อ 6</p>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+                <div class="row">
+                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
+                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
+                </div>
+            </div>
+        </div>
+
+        <br><br>
         <!--
         <button onclick="window.location.href='/course-Datatype_and_Variable-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h4><u>แบบทดสอบย่อย</h2></u></button>-->
+        <h4><u>แบบทดสอบหลังเรียน</h2></u></button>-->
         
 
         
